--- a/app2/client/main.html
+++ b/app2/client/main.html
@@ -4,26 +4,61 @@
 
 <body>
   <h1>Welcome to Meteor!</h1>
-
+  <h2>Test Image upload</h2>
+  {{> addAnnouncement}}
+  {{> addImage}}
+  {{> announcements}}
+  {{> message}}
+  {{> viewImage}}
+  <h2>Algolia Search Engine</h2>
   {{> hello}}
-  {{> info}}
-    {{> movies}}
-    {{> post}}
+  {{> movies}}
+  {{> post}}
 </body>
+
+<template name="announcements">
+  <h3>Announcement List</h3>
+  <ul>
+    {{#each announcement}}
+      <li class="announcement">{{title}}:{{message}}</li>
+    {{/each}}
+  </ul>
+</template>
+
+<template name="message">
+  <h2>Current message:</h2>
+    <h3>{{title}} : {{message}}</h3>
+</template>
+
+<template name="addAnnouncement">
+  <h2>New Announcement</h2>
+  <form class="new">
+        <input type="text" name="title" placeholder="Title here" />
+        <input type="text" name="message" placeholder="Message here" />
+        <input type="submit" value="Submit">
+  </form>
+</template>
+
+<template name="addImage">
+  <div id="dropzone" class="dropzone" style="background-color:#0000FF">
+    Drop file(s) here to upload
+  </div>
+</template>
+
+<template name="viewImage">
+  <h3>Image:</h3>
+  {{#with image}}
+  <div style="border:thin">
+    <a href="{{this}}" target="_blank" class="thumbnail">
+      <img src="{{this}}" />
+    </a>
+  </div>
+  {{/with}}
+</template>
 
 <template name="hello">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
 </template>
 
 <template name="movies">
