Login Page almost done

--- a/production/imports/ui/pages/login.html
+++ b/production/imports/ui/pages/login.html
@@ -1,4 +1,34 @@
 <template name="login">
-    <h1>This is the login page</h1>
-    <a href="stream">Login</a>
+    <div class="container-fluid full-screen">
+        <div class="col-lg-8 jumbotron-area">
+            <div class="information">
+                <h1>UHS LIFE</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi delectus dolore ea est excepturi id, qui quo ratione sapiente suscipit? At cupiditate deserunt dolorum expedita facere illum nisi non quod.
+                    ommodi consectetur doloremque eius enim neque nostrum, reprehenderit repudiandae. Ab aspernatur cumque dolore doloribus eaque fugit illo ipsam ipsum minima nam nisi odio officia omnis, quasi quisquam sunt totam vitae.
+                    Adipisci alias aspernatur deleniti dolores exercitationem facilis illo ipsa laboriosam minima necessitatibus nemo nesciunt, non optio porro praesentium quae quia quos reiciendis sequi, soluta suscipit tempore tenetur ullam vero voluptas!
+                </p>
+                <a class="btn btn-lg btn-primary">Read More</a>
+            </div>
+        </div>
+        <div class="col-lg-4 login-area">
+            <div class="form">
+                <h1>Login</h1>
+                <form class="register-form">
+                    <input type="text" placeholder="name"/>
+                    <input type="password" placeholder="password"/>
+                    <input type="text" placeholder="email address"/>
+                    <button>create</button>
+                    <p class="message">Already registered? <a href="" class="operation">Sign In</a></p>
+                </form>
+                <form class="login-form">
+                    <input type="text" placeholder="Email"/>
+                    <input type="password" placeholder="Password"/>
+                    <input type="submit" value="Login">
+                    <p class="message">Not registered? <a href="" class="operation">Create an account</a></p>
+                </form>
+            </div>
+        </div>
+    </div>
+
 </template>
