Web App Login System update

--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -1,3 +1,12 @@
 <template name="stream">
-    <h1>This is the stream page</h1>
+    <div class="container main">
+        <div class="col-lg-12">
+            <h2>This is a test</h2>
+            <p>
+                You have logged in, click logout to logout.
+            </p>
+            <p><a href="" class="logout">Logout</a></p>
+        </div>
+
+    </div>
 </template>
