Navigation system in BETA, stream page begining
Navigation bars are almost done,
search function still needs to be implemented

--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -1,12 +1,33 @@
 <template name="stream">
+    {{> navigation}}
     <div class="container main">
-        <div class="col-lg-12">
+        <div class="col-lg-12 content">
             <h2>This is a test</h2>
             <p>
                 You have logged in, click logout to logout.
             </p>
             <p><a href="" class="logout">Logout</a></p>
+            <h1>
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam debitis optio repudiandae
+                    veritatis vitae? Adipisci aspernatur dignissimos ea ipsum nisi, quis tempore voluptates.
+                    Accusantium, architecto aspernatur dolorem facere nam reiciendis?
+                </div>
+                <div>Aperiam at corporis, distinctio dolore dolorum excepturi hic in ipsum, laborum non possimus saepe
+                    sit suscipit tempora unde. Aut consequatur ducimus harum id inventore laudantium natus perferendis
+                    sint, unde vitae?
+                </div>
+                <div>Accusantium, aliquam distinctio error ipsum nemo quasi quidem quis vel. Error illo quia sed!
+                    Commodi dolorem doloribus dolorum expedita illo iure molestias recusandae reprehenderit? Dolorem
+                    esse impedit nulla numquam officiis.
+                </div>
+                <div>Cupiditate dignissimos id laboriosam odit perspiciatis quasi saepe! A accusantium asperiores aut
+                    commodi culpa doloremque ea fuga iste iusto molestiae numquam, odio odit quibusdam ratione sapiente
+                    tempore, ullam veniam, voluptas.
+                </div>
+                <div>A alias atque ducimus exercitationem hic ipsa laborum minus natus necessitatibus nisi non, quam
+                    voluptatem. Atque doloremque, eius eum fugit impedit inventore odio provident quae quis, ratione,
+                    repellat suscipit ut?
+                </div></h1>
         </div>
-
     </div>
 </template>
