Revamped routing and interface improvements

--- a/production/imports/ui/pages/login.html
+++ b/production/imports/ui/pages/login.html
@@ -23,7 +23,14 @@
             </div>
         </div>
         <div class="col-lg-4 login-area">
-            <div class="form">
+            <div class="login-with-google">
+                <h1 class="mb-30">Login</h1>
+                <a class="btn btn-primary btn-lg btn-login ptb-30" id="googleLogin" href="">
+                    <i class="fa fa-fw fa-2x fa-google" aria-hidden="true"></i> Login with YRDSB Gapps Account
+                </a>
+            </div>
+
+<!--            <div class="form">
                 <form class="register-form">
                     <h1>Register</h1>
                     <input type="text" placeholder="First Name" name="firstName" />
@@ -41,7 +48,7 @@
                     <input type="submit" value="Login"/>
                     <p class="message">Not registered? <a href="" class="operation">Create an account</a></p>
                 </form>
-            </div>
+            </div>-->
         </div>
     </div>
 
