--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -2,32 +2,84 @@
     {{> navigation}}
     <div class="container main">
         <div class="col-lg-12 content">
-            <h2>This is a test</h2>
-            <p>
-                You have logged in, click logout to logout.
-            </p>
-            <p><a href="" class="logout">Logout</a></p>
-            <h1>
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam debitis optio repudiandae
-                    veritatis vitae? Adipisci aspernatur dignissimos ea ipsum nisi, quis tempore voluptates.
-                    Accusantium, architecto aspernatur dolorem facere nam reiciendis?
+            <div class="button-group filter-button-group">
+                <button class="filter-btn is-checked" data-filter="*">ALL</button>
+                <button class="filter-btn" data-filter=".a">Test A</button>
+                <button class="filter-btn" data-filter=".b">Test B</button>
+                <button class="filter-btn" data-filter=".image">Images</button>
+            </div>
+            <div class="grid">
+                <div class="grid-sizer"></div>
+                <div class="grid-item a">
+                    <h2>Test A</h2>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
+                        soluta sunt, unde voluptatum.
+                    </div>
+                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
+                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
+                        tenetur veniam veritatis.
+                    </div>                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
+                        soluta sunt, unde voluptatum.
+                    </div>
+                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
+                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
+                        tenetur veniam veritatis.
+                    </div>
                 </div>
-                <div>Aperiam at corporis, distinctio dolore dolorum excepturi hic in ipsum, laborum non possimus saepe
-                    sit suscipit tempora unde. Aut consequatur ducimus harum id inventore laudantium natus perferendis
-                    sint, unde vitae?
+                <div class="grid-item a">
+                    <h2>Test A</h2>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
+                        soluta sunt, unde voluptatum.
+                    </div>
+                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
+                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
+                        tenetur veniam veritatis.
+                    </div>
                 </div>
-                <div>Accusantium, aliquam distinctio error ipsum nemo quasi quidem quis vel. Error illo quia sed!
-                    Commodi dolorem doloribus dolorum expedita illo iure molestias recusandae reprehenderit? Dolorem
-                    esse impedit nulla numquam officiis.
+                <div class="grid-item b">
+                    <h2>Test B</h2>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
+                        soluta sunt, unde voluptatum.
+                    </div>
+                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
+                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
+                        tenetur veniam veritatis.
+                    </div>                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
+                        soluta sunt, unde voluptatum.
+                    </div>
+                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
+                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
+                        tenetur veniam veritatis.
+                    </div>
                 </div>
-                <div>Cupiditate dignissimos id laboriosam odit perspiciatis quasi saepe! A accusantium asperiores aut
-                    commodi culpa doloremque ea fuga iste iusto molestiae numquam, odio odit quibusdam ratione sapiente
-                    tempore, ullam veniam, voluptas.
+                <div class="grid-item b">
+                    <h2>Test B</h2>
+                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
+                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
+                        soluta sunt, unde voluptatum.
+                    </div>
+                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
+                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
+                        tenetur veniam veritatis.
+                    </div>
                 </div>
-                <div>A alias atque ducimus exercitationem hic ipsa laborum minus natus necessitatibus nisi non, quam
-                    voluptatem. Atque doloremque, eius eum fugit impedit inventore odio provident quae quis, ratione,
-                    repellat suscipit ut?
-                </div></h1>
+                <div class="grid-item image">
+                    <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
+                </div><div class="grid-item image">
+                    <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
+                </div><div class="grid-item image">
+                    <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
+                </div><div class="grid-item image">
+                    <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
+                </div><div class="grid-item image">
+                    <img class="img-responsive" src="https://dummyimage.com/16:9x1080" />
+                </div>
+            </div>
         </div>
     </div>
 </template>
