--- a/production/imports/ui/pages/stream.html
+++ b/production/imports/ui/pages/stream.html
@@ -11,22 +11,12 @@
             </div>
             <div class="grid">
                 <div class="grid-sizer"></div>
-                <div class="grid-item a">
-                    <h2>Test A</h2>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
-                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
-                        soluta sunt, unde voluptatum.
-                    </div>
-                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
-                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
-                        tenetur veniam veritatis.
-                    </div>                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam atque eveniet facere
-                        itaque sed ullam voluptate voluptatem. Accusamus alias dolores esse neque nihil omnis quaerat
-                        soluta sunt, unde voluptatum.
-                    </div>
-                    <div>Aliquam asperiores autem est explicabo facilis fugiat incidunt nam odit optio, quia sequi
-                        suscipit ut vitae. Aliquid commodi dolore dolores id in, magni officia optio quibusdam quidem,
-                        tenetur veniam veritatis.
+                <div class="grid-item image">
+                    <div class="item-container">
+                        <img src="https://dummyimage.com/16:9x1080" alt="Avatar" class="item-image">
+                        <div class="overlay">
+                            <div class="text">Hello World</div>
+                        </div>
                     </div>
                 </div>
                 <div class="grid-item a">
