--- a/app2/client/main.html
+++ b/app2/client/main.html
@@ -4,6 +4,7 @@
 
 <body>
   <h1>Welcome to Meteor!</h1>
+  {{> mailChimp}}
   {{> addAnnouncementTextMedia}}
   {{> addAnnouncementMedia}}
   {{> addAnnouncementText}}
@@ -111,4 +112,12 @@
             <li class="announcement">{{title}}</li>
         {{/each}}
     </ul>
+</template>
+
+<template name="mailChimp">
+   <h2>Add Subscriber</h2>
+   <form class="new">
+      <input type="text" name="email" placeholder="Email Address" /> <br>
+      <input type="submit" value="Submit">
+   </form>
 </template>
