--- a/production/imports/ui/pages/details.html
+++ b/production/imports/ui/pages/details.html
@@ -1,5 +1,5 @@
 <template name="details">
-    {{> navigation title="12 Advantages of doing yoga"}}
+    {{> navigation title="12 Advantages of doing yoga" oper="true"}}
     <div class="main post-body">
         <div class="container-fluid post-header center-wrapper" style="background-image: url('img/test.jpg')">
             <div>
@@ -50,8 +50,10 @@
                 <blockquote>This is an experiment of a block quote. The number one rule of fight club is you do not talk about fight club.</blockquote>
                 <h2>This is an image test block</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A culpa deserunt ducimus eligendi, excepturi fugit illo nam nesciunt non numquam odit pariatur quae qui repellendus tenetur. Assumenda autem quas veritatis.</p>
-                <img class="img-responsive" src="img/test.jpg">
-                <p class="img-caption text-capitalize">Credit: Some random dude on Unsplash</p>
+                <div class="img-container">
+                    <img class="img-responsive" src="img/test.jpg">
+                    <p class="img-caption text-capitalize">Credit: Some random dude on Unsplash</p>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cumque deserunt eligendi exercitationem, harum impedit labore libero optio perspiciatis quas quisquam ut? Distinctio, dolore, sequi. Earum explicabo, nihil? Commodi, veritatis?</p>
             </div>
         </div>
