--- a/mobile/imports/ui/pages/newsDetail.html
+++ b/mobile/imports/ui/pages/newsDetail.html
@@ -19,7 +19,7 @@
                     <h2>
                         <a href="#">uhs.life - OFFICIALLY LAUNCHED!</a>
                     </h2>
-                    <h3>_______________________</h3>
+                    <hr/>
                     <p class="news-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                         sed do eiusmod tempor incididunt ut labore et dolore magna
                         aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -36,6 +36,17 @@
                         proident, sunt in culpa qui officia deserunt mollit anim id est
                         laborum.</p>
                 </article>
+                <ul class="tags">
+                    <li>
+                        <a href="#" class="tag">School</a>
+                    </li>
+                    <li>
+                        <a href="#" class="tag">uhs.life</a>
+                    </li>
+                    <li>
+                        <a href="#" class="tag">Announcement</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
