marks + minor fixes

--- a/mobile/imports/ui/pages/marks.html
+++ b/mobile/imports/ui/pages/marks.html
@@ -1,4 +1,90 @@
 <template name="marks">
     <!-- Navigation -->
     {{> botnav}}
+    <div class="marks-container">
+        <div class="marks-card-wrapper">
+            <div class="marks-card marks-radius marks-shadowDepth1">
+                <div class="marks-card-content marks-card-padding">
+                    <article class="marks-card-article">
+                        <h2 class="marks-course-title">ICS4U</h2>
+                        <p class="marks-course-subtitle">Computer Science</p>
+                        <p class="marks-course-teacher">Mr. Poulsson</p>
+                        <p class="marks-course-room">Room 103</p>
+                        <p class="marks-course-mark">100%</p>
+                    </article>
+                </div>
+                <div class="marks-progress-bar marks-radius"></div>
+            </div>
+        </div>
+        <div class="marks-card-wrapper">
+            <div class="marks-card marks-radius marks-shadowDepth1">
+                <div class="marks-card-content marks-card-padding">
+                    <article class="marks-card-article">
+                        <h2 class="marks-course-title">ENG4U</h2>
+                        <p class="marks-course-subtitle">English</p>
+                        <p class="marks-course-teacher">Mr. Beaton</p>
+                        <p class="marks-course-room">Room 303</p>
+                        <p class="marks-course-mark">78%</p>
+                    </article>
+                </div>
+                <div class="marks-progress-bar-yellow marks-radius"></div>
+            </div>
+        </div>
+        <div class="marks-card-wrapper">
+            <div class="marks-card marks-radius marks-shadowDepth1">
+                <div class="marks-card-content marks-card-padding">
+                    <article class="marks-card-article">
+                        <h2 class="marks-course-title">DAB4U</h2>
+                        <p class="marks-course-subtitle">Professional Dab</p>
+                        <p class="marks-course-teacher">Mr. Dabberino</p>
+                        <p class="marks-course-room">Room 123</p>
+                        <p class="marks-course-mark">43%</p>
+                    </article>
+                </div>
+                <div class="marks-progress-bar-red marks-radius"></div>
+            </div>
+        </div>
+        <div class="marks-card-wrapper">
+            <div class="marks-card marks-radius marks-shadowDepth1">
+                <div class="marks-card-content marks-card-padding">
+                    <article class="marks-card-article">
+                        <h2 class="marks-course-title">ICS4U</h2>
+                        <p class="marks-course-subtitle">Computer Science</p>
+                        <p class="marks-course-teacher">Mr. Poulsson</p>
+                        <p class="marks-course-room">Room 103</p>
+                        <p class="marks-course-mark">100%</p>
+                    </article>
+                </div>
+                <div class="marks-progress-bar marks-radius"></div>
+            </div>
+        </div>
+        <div class="marks-card-wrapper">
+            <div class="marks-card marks-radius marks-shadowDepth1">
+                <div class="marks-card-content marks-card-padding">
+                    <article class="marks-card-article">
+                        <h2 class="marks-course-title">ICS4U</h2>
+                        <p class="marks-course-subtitle">Computer Science</p>
+                        <p class="marks-course-teacher">Mr. Poulsson</p>
+                        <p class="marks-course-room">Room 103</p>
+                        <p class="marks-course-mark">100%</p>
+                    </article>
+                </div>
+                <div class="marks-progress-bar marks-radius"></div>
+            </div>
+        </div>
+        <div class="marks-card-wrapper">
+            <div class="marks-card marks-radius marks-shadowDepth1">
+                <div class="marks-card-content marks-card-padding">
+                    <article class="marks-card-article">
+                        <h2 class="marks-course-title">ICS4U</h2>
+                        <p class="marks-course-subtitle">Computer Science</p>
+                        <p class="marks-course-teacher">Mr. Poulsson</p>
+                        <p class="marks-course-room">Room 103</p>
+                        <p class="marks-course-mark">100%</p>
+                    </article>
+                </div>
+                <div class="marks-progress-bar marks-radius"></div>
+            </div>
+        </div>
+    </div>
 </template>
